--- a/ch2_python_basic.ipynb
+++ b/ch2_python_basic.ipynb
@@ -1014,7 +1014,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import time\n",
@@ -1458,25 +1460,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.934209417575924, 0.3535656068515457, 0.1690685445403699, 0.9669142105202255]\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "\n",
-    "four_uniform_randoms = [random.random() for _ in range(4)]"
+    "four_uniform_randoms = [random.random() for _ in range(4)]\n",
+    "print(four_uniform_randoms)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5714025946899135\n",
+      "0.5714025946899135\n"
+     ]
+    }
+   ],
+   "source": [
+    "# seed가 같을 때 난수는?\n",
+    "random.seed(10)\n",
+    "print(random.random())\n",
+    "random.seed(10)\n",
+    "print(random.random())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 8, 7, 5, 1]\n",
+      "[3, 5, 4, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 구간 안에서의 난수 생성\n",
+    "random_list1 = [random.randrange(10) for _ in range(5)]    # [0, 1, 2, ... 9] 사이\n",
+    "random_list2 = [random.randrange(3, 6) for _ in range(5)]  # [3, 4, 5] 사이\n",
+    "print(random_list1)\n",
+    "print(random_list2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 8, 2, 0, 6, 9, 7, 5, 3]\n",
+      "Alice\n",
+      "[26, 15, 2, 57, 31, 19]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# list 항목 섞을 때 suffle()\n",
+    "up_to_ten = list(range(10))\n",
+    "random.shuffle(up_to_ten)\n",
+    "print(up_to_ten)\n",
+    "\n",
+    "# list에서 임의의 항목 선택 choice()\n",
+    "my_best_friend = random.choice([\"Alice\", \"Bob\", \"Charlie\"])\n",
+    "print(my_best_friend)\n",
+    "\n",
+    "# list에서 중복이 허용되지 않는 임의의 표본 list를 만들고 싶을 때 sample()\n",
+    "lottery_numbers = range(60)\n",
+    "winning_numbers = random.sample(lottery_numbers, 6)\n",
+    "print(winning_numbers)"
+   ]
   },
   {
    "cell_type": "code",
@@ -1541,39 +1616,295 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Set:\n",
+    "    def __init__(self, values=None):\n",
+    "        \"\"\"다음과 같이 사용할 수 있다.\n",
+    "        s1 = Set()\n",
+    "        s2 = Set([1,2,2,3])\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        self.dict = {}   # 모든 Set의 인스턴스는 자체적으로 dict를 유지\n",
+    "        \n",
+    "        if values is not None:\n",
+    "            for value in values:\n",
+    "                self.add(value)\n",
+    "                \n",
+    "    def __repr__(self):\n",
+    "        \"\"\"파이썬 프롬프트에서 이 함수를 입력하거나 str()으로 보내 주면 \n",
+    "        Set 객체를 문자열로 표현해 줌\"\"\"\n",
+    "        return \"Set: \" + set(self.dict.keys())\n",
+    "    \n",
+    "    def add(self, value):\n",
+    "        self.dict[value] = True\n",
+    "    \n",
+    "    def contains(self, value):\n",
+    "        return value in self.dict\n",
+    "    \n",
+    "    def remove(self, value):\n",
+    "        del self.dict[value]\n",
+    "        \n",
+    "# 다음과 같이 사용할 수 있다.\n",
+    "s = Set([1, 2, 3])\n",
+    "s.add(4)\n",
+    "print(s.contains(4))\n",
+    "s.remove(3)\n",
+    "print(s.contains(3))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2.7 함수형 도구\n",
+    "* partial function application (currying)\n",
+    "    * 이미 존재하는 함수의 부분을 사용하여 새로운 함수를 만들 때\n",
+    "    * (practically) 2개 이상의 parameter를 갖는 함수의 일부 parameter에 기본값을 적용한 새로운 함수를 만드는 것\n",
+    "    * `functools.partial`를 사용함."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "def exp(base, power):\n",
+    "    return base ** power\n",
+    "\n",
+    "# base가 2인 함수 별도 구현\n",
+    "def two_to_the(power):\n",
+    "    return exp(2, power)\n",
+    "\n",
+    "# functools.partial 사용\n",
+    "from functools import partial\n",
+    "two_to_the = partial(exp, 2)\n",
+    "print(two_to_the(3))\n",
+    "\n",
+    "# 인자의 이름을 명시해 주면 뒤에 나오는 인자도 partial적용가능\n",
+    "square_of = partial(exp, power=2)\n",
+    "print(square_of(3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* `list comprehension`의 대안으로 `map, reduce, filter`를 사용할 수 있다.\n",
+    "    * `map(tranform function, list)` : list의 각 요소에 transform을 적용하여 새로운 list 생성\n",
+    "    * `filter(condition function, list)` : list의 각 요소에 condition을 체크하여 참인 경우만 모아 새 list 생성\n",
+    "    * `reduce(reducer function, list)` : list의 각 요소를 순차적으로 합쳐 하나의 값으로 표현"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8]\n",
+      "[2, 4, 6, 8]\n",
+      "[2, 4, 6, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def double(x):\n",
+    "    return 2 * x\n",
+    "\n",
+    "xs = [1, 2, 3, 4]\n",
+    "twice_xs = [double(x) for x in xs]     # list comprehension\n",
+    "twice_xs2 = map(double, xs) \n",
+    "list_doubler = partial(map, double)    # list의 결과를 2배로 만들어 주는 함수\n",
+    "twice_xs3 = list_doubler(xs)\n",
+    "print(twice_xs)\n",
+    "print(list(twice_xs2))\n",
+    "print(list(twice_xs3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 여러 개의 list를 입력해 주면 인자가 여러 개인 함수에도 map적용 가능\n",
+    "def multiply(x, y): return x * y\n",
+    "\n",
+    "products = map(multiply, [1, 2], [4, 5])    # [1, * 3, 2 * 5] = [4, 10]\n",
+    "print(list(products))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4]\n",
+      "[2, 4]\n",
+      "[2, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# filter는 if가 포함된 list comprehension과 동일하다.\n",
+    "def is_even(x):\n",
+    "    \"\"\"x가 짝수면 True, 홀수면 False\"\"\"\n",
+    "    return x % 2 == 0\n",
+    "\n",
+    "x_evens = [x for x in xs if is_even(x)]   \n",
+    "x_evens2 = filter(is_even, xs)\n",
+    "list_evener = partial(filter, is_even)\n",
+    "x_evens3 = list_evener(xs)\n",
+    "\n",
+    "print(x_evens)\n",
+    "print(list(x_evens2))\n",
+    "print(list(x_evens3))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n",
+      "24\n"
+     ]
+    }
+   ],
+   "source": [
+    "from functools import reduce\n",
+    "# reduce \n",
+    "x_product = reduce(multiply, xs)\n",
+    "list_product = partial(reduce, multiply)\n",
+    "x_product2 = list_product(xs)\n",
+    "print(x_product)\n",
+    "print(x_product2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2.8 enumerate\n",
+    "* list 반복하면서 list의 항목과 인덱스가 모두 필요한 경우\n",
+    "* list을 인덱스와 엮어 tuple을 만들어 주는 `enumerate`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 a\n",
+      "1 b\n",
+      "2 c\n",
+      "0\n",
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "documents = [\"a\", \"b\", \"c\"]\n",
+    "for i, document in enumerate(documents):\n",
+    "    print(i, document) # do_somtething(i, document)\n",
+    "\n",
+    "# 만약 인덱스만 필요하다면 \n",
+    "for i, _ in enumerate(documents): print(i) #do_somthing(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2.9 zip과  argument unpacking\n",
+    "* 두 개 이사의 list를 서로 묶을 때 `zip(list1, list2)` 사용\n",
+    "\n",
+    "* argument unpacking(인자 해체) : `*`\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "### 2.2.7 함수형 도구"
+    "list1 = ['a', 'b', 'c', 'd', 'e']\n",
+    "list2 = [1, 2, 3]\n",
+    "zipped = zip(list1, list2)\n",
+    "\n",
+    "#print(list(zipped))"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('a', 1), ('b', 2), ('c', 3)]\n",
+      "('a', 'b', 'c')\n",
+      "(1, 2, 3)\n"
+     ]
+    }
+   ],
    "source": [
-    "### 2.2.8 enumerate"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2.2.9 zip과  argument unpacking"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2.2.10 args와 kwargs"
+    "# 묶인 list는 다음과 같은 트릭을 사용해 다시 풀어줄 수도 있음\n",
+    "#pairs = [('a', 1), ('b', 2), ('c', 3)]\n",
+    "pairs = list(zipped)\n",
+    "print(pairs)\n",
+    "letters, numbers = zip(*pairs)\n",
+    "print(letters)\n",
+    "print(numbers)\n"
    ]
   },
   {
@@ -1583,7 +1914,152 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# 인자 해제 기법\n",
+    "def add(a, b): return a + b\n",
+    "\n",
+    "add(1, 2)\n",
+    "add([1, 2])\n",
+    "add(*[1, 2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2.10 args와 kwargs\n",
+    "* 함수의 파라메터 선언을 유연하게 할 수 있게 해줌 (가변 파라메터)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "0\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "g() takes 1 positional argument but 2 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-20-dd89a6c9d845>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0mg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdoubler\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mg\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: g() takes 1 positional argument but 2 were given"
+     ]
+    }
+   ],
+   "source": [
+    "# 특정함수 f를 입력하면 f의 결과를 두 배로 만드는 함수를 반환해 주는 고차 함수\n",
+    "\n",
+    "# 파라메터가 1개일 때만 동작\n",
+    "def doubler(f):\n",
+    "    def g(x):\n",
+    "        return 2 * f(x)\n",
+    "    return g\n",
+    "\n",
+    "def f1(x):\n",
+    "    return x + 1\n",
+    "\n",
+    "g = doubler(f1)\n",
+    "print(g(3))\n",
+    "print(g(-1))\n",
+    "\n",
+    "# 두 개 이상의 인자를 받는 함수의 경우에는 문제 발생\n",
+    "def f2(x, y):\n",
+    "    return x + y\n",
+    "\n",
+    "g = doubler(f2)\n",
+    "print(g(1,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "unnamed args: (1, 2)\n",
+      "keyword args: {'key': 'word', 'key2': 'word2'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 임의의 수를 인자를 받는 함수 선언\n",
+    "# argument unpacking\n",
+    "def magic(*args, **kwargs):\n",
+    "    print(\"unnamed args:\", args)\n",
+    "    print(\"keyword args:\", kwargs)\n",
+    "    \n",
+    "magic(1, 2, key=\"word\", key2=\"word2\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* `args` : 이름이 없는 인자로 구성된 `tuple`\n",
+    "* `kwargs` :  이름이 주어진 인자로 구성된 `dict`\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 반대로, 정해진 수의 인자가 있는 함수를 호출할 때도 `list`나 `dict`로 인자를 전달할 수 있다.\n",
+    "def other_way_magic(x, y, z):\n",
+    "    return x + y + z\n",
+    "\n",
+    "x_y_list = [1, 2]\n",
+    "z_dict = { \"z\" :  3 }\n",
+    "print(other_way_magic(*x_y_list, **z_dict))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 임의의 인자를 입력 받을 수 있는 고차 함수를 만들 때만 `args`, `kwargs`를 사용하자\n",
+    "def doubler_correct(f):\n",
+    "    \"\"\"f의 인자에 상관없이 작동함\"\"\"\n",
+    "    def g(*args, **kwargs):\n",
+    "        \"\"\"g의 인자가 무엇이든 간에 f로 보내줌\"\"\"\n",
+    "        return 2 * f(*args, **kwargs)\n",
+    "    return g\n",
+    "\n",
+    "g = doubler_correct(f2)\n",
+    "print(g(1, 2))"
+   ]
   }
  ],
  "metadata": {
@@ -1602,7 +2078,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
