--- a/ch05_statistics_jw.ipynb
+++ b/ch05_statistics_jw.ipynb
@@ -478,8 +478,8 @@
     "    * 공분산의 크기를 가늠하기 어려움\n",
     "$$\\bar{x}, \\bar{y}가 각각 변수 x, y의 평균이라고 할 때,\\\\\n",
     "\\begin{align}\n",
-    "C(x,y)=& \\frac{1}{n}\\sum_{i=1}^n(x_i - \\bar{x})(y_i - \\bar{y}) \\\\\n",
-    "=& \\frac{1}{n}\\sum_{i=1}^nx_iy_i-\\bar{x}\\bar{y}\n",
+    "C(x,y)=& \\frac{1}{n - 1}\\sum_{i=1}^n(x_i - \\bar{x})(y_i - \\bar{y}) \\\\\n",
+    "=& \\frac{1}{n - 1}\\sum_{i=1}^nx_iy_i-\\bar{x}\\bar{y}\n",
     "\\end{align}\n",
     "$$\n",
     "* 상관관계(correlation) - 상관 계수\n",
@@ -714,7 +714,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
