--- a/ch08_gradient_descent_jw.ipynb
+++ b/ch08_gradient_descent_jw.ipynb
@@ -205,7 +205,7 @@
    "metadata": {},
    "source": [
     "## 8.3 Gradient 적용하기\n",
-    "* `sum_of_aquares`는 v가 0벡터일 때 가장 작은 값을 가진다. \n",
+    "* `sum_of_squares`는 v가 0벡터일 때 가장 작은 값을 가진다. \n",
     "* 이 사실을 모른다고 가정하고, 경사 하강법을 이용해 **3차원 벡터**의 최솟값을 구하는 예제\n",
     "    * 임의의 시작점을 잡고, gradient가 아주 작아질 때까지 경사의 반대 방향으로 조금씩 이동"
    ]
@@ -299,7 +299,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8.5 종합하기"
+    "## 8.5 종합하기\n",
+    "\n",
+    "* target_fn : 최소화하려는 함수 - 특정 모델의 파라미터에 대한 오류값 함수  \n",
+    "* gradient_fn 이 존재  \n",
+    "* 파라미터 theta_0의 시작점\n",
+    "\n",
+    "라고 가정해보면 경사하강법을 이용하면 오류값을 최소화하는 파라미터를 찾을 수 있음.  \n",
+    "> 아래 함수를 `minimize_batch`라고 하는 이유는, 반복문을 돌 때마다 데이터셋 전체를 살펴보기 때문  \n",
+    "즉, `target_fn`이 데이터셋 전체에 대한 에러를 반환한다.  \n",
+    "반대로, SGD의 경우 한 번에 하나의 데이터 포인트를 본다."
    ]
   },
   {
@@ -382,24 +391,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8.6 SGD(stochastic gradient descent) "
+    "## 8.6 SGD(stochastic gradient descent) \n",
+    "앞으로 경사 하강법을 이용해 모델의 오류를 최소화하는 파라미터를 자주 찾을 것이다.  \n",
+    "앞의 `minimize-batch`는 반복문을 돌 때마다 데이터 전체에 대해 gradient값을 계산해야하기 때문에 시간이 아주 오래 걸림\n",
+    "* 대부분의 오류 함수는 더할 수 있는(additive) 속성을 가지고 있음\n",
+    "* 즉, 데이터 전체에 대한 오류값이 각각 데이터 포인트에 대한 오류값의 합과 같음\n",
+    "* 이런 경우 한 번 반복문을 돌 때마다 데이터 포인트 한 개에 대한 gradient를 계산하는 SGD를 사용할 수 있음\n",
+    "    * SGD는 수렴할 때까지 전체 데이터셋을 반복적으로 사용함.\n",
+    "    * 최적해 근방에서 영원히 떠돌게 될 수 있으므로 함수값이 한동안 줄지 않으면 이동 거리를 줄이고 최종적으로 알고리즘을 종료해야함."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -410,10 +417,10 @@
     "#\n",
     "\n",
     "def in_random_order(data):\n",
-    "    \"\"\"generator that returns the elements of data in random order\"\"\"\n",
-    "    indexes = [i for i, _ in enumerate(data)]  # create a list of indexes\n",
-    "    random.shuffle(indexes)                    # shuffle them\n",
-    "    for i in indexes:                          # return the data in that order\n",
+    "    \"\"\"임의의 순서로 data의 데이터 포인트를 반환\"\"\"\n",
+    "    indexes = [i for i, _ in enumerate(data)]  # 데이터 포인트의 인덱스를 list로 생성\n",
+    "    random.shuffle(indexes)                    # 인덱스를 섞고\n",
+    "    for i in indexes:                          # 그 순서대로 데이터를 반환\n",
     "        yield data[i]"
    ]
   },
@@ -428,27 +435,27 @@
     "def minimize_stochastic(target_fn, gradient_fn, x, y, theta_0, alpha_0=0.01):\n",
     "\n",
     "    data = list(zip(x, y))\n",
-    "    theta = theta_0                             # initial guess\n",
-    "    alpha = alpha_0                             # initial step size\n",
-    "    min_theta, min_value = None, float(\"inf\")   # the minimum so far\n",
+    "    theta = theta_0                             # 첫 시작점\n",
+    "    alpha = alpha_0                             # 기본 이동 거리\n",
+    "    min_theta, min_value = None, float(\"inf\")   # 시작할 때의 최솟값\n",
     "    iterations_with_no_improvement = 0\n",
     "\n",
-    "    # if we ever go 100 iterations with no improvement, stop\n",
+    "    # 만약 100번이 넘게 반복하는 동안 더 작아지지 않는다면 멈춤\n",
     "    while iterations_with_no_improvement < 100:\n",
     "        value = sum( target_fn(x_i, y_i, theta) for x_i, y_i in data )\n",
     "\n",
     "        if value < min_value:\n",
-    "            # if we've found a new minimum, remember it\n",
-    "            # and go back to the original step size\n",
+    "            # 새로운 최솟값을 찾아다면 이 값을 저장하고\n",
+    "            # 기본 이동 거리로 다시 돌아감\n",
     "            min_theta, min_value = theta, value\n",
     "            iterations_with_no_improvement = 0\n",
     "            alpha = alpha_0\n",
     "        else:\n",
-    "            # otherwise we're not improving, so try shrinking the step size\n",
+    "            # 만약 최솟값이 줄어들지 않는다면 이동 거리를 축소\n",
     "            iterations_with_no_improvement += 1\n",
     "            alpha *= 0.9\n",
     "\n",
-    "        # and take a gradient step for each of the data points\n",
+    "        # 각 데이터 포인트에 대해 경사를 계산\n",
     "        for x_i, y_i in in_random_order(data):\n",
     "            gradient_i = gradient_fn(x_i, y_i, theta)\n",
     "            theta = vector_subtract(theta, scalar_multiply(alpha, gradient_i))\n",
@@ -643,7 +650,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
